--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,5 +1,5 @@
 #开发环境
-server.port=8088
+server.port=8081
 #日志配置
 logging.file.path=log
 logging.file.name=log.log
@@ -100,3 +100,18 @@ webSocket.path=/topic
 webSocket.path1=/user
 webSocket.userDestinationPrefix=/user
 webSocket.applicationDestinationPrefixes=/app
+
+
+#session超时时间
+shiro.session.timeout=1800000
+shiro.session.validationInterval=3600000
+#验证码超时时间
+login.verifyTTL=60
+
+shiro.loginUrl=/login
+shiro.successUrl=/
+shiro.unauthorizedUrl=/unauthorized
+
+cas.server.url.prefix=http://127.0.0.1
+cas.server.loginUrl=http://127.0.0.1/login
+cas.server.logoutUrl=http://127.0.0.1/logout
