对系统js目录的调整，增加websocket功能

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -95,9 +95,9 @@ spring.datasource.druid.web-stat-filter.exclusions=*.js,*.gif,*.jpg,*.bmp,*.png,
 spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
 spring.jackson.time-zone=GMT+8
 #websocket配置
-webSocket.webSocketPath=/finesys
-webSocket.path=/topic
-webSocket.path1=/user
+webSocket.webSocketPath=/websocket
+webSocket.topicPath=/topic
+webSocket.userPath=/user
 webSocket.userDestinationPrefix=/user
 webSocket.applicationDestinationPrefixes=/app
 
@@ -105,8 +105,10 @@ webSocket.applicationDestinationPrefixes=/app
 #session超时时间
 shiro.session.timeout=1800000
 shiro.session.validationInterval=3600000
-#验证码超时时间
+#验证码超时时间秒
 login.verifyTTL=60
+#密码过期时间,默认90天
+login.password.expireDate=90
 
 shiro.loginUrl=/login
 shiro.successUrl=/
