--- a/pom.xml
+++ b/pom.xml
@@ -57,6 +57,10 @@
         <json3.version>3.3.2</json3.version>
         <metisMenu.version>2.7.0</metisMenu.version>
         <slidebars.version>2.0.2</slidebars.version>
+        <popper.version>1.15.0</popper.version>
+        <slimScroll.version>1.3.8</slimScroll.version>
+        <sockjs-client.version>1.1.2</sockjs-client.version>
+        <stomp-js.version>ca2e094679</stomp-js.version>
         <stomp-websocket.version>2.3.3-1</stomp-websocket.version>
         <modernizr.version>2.8.3-1</modernizr.version>
         <nicescroll.version>3.7.6</nicescroll.version>
@@ -65,6 +69,7 @@
         <jquery.form.version>4.2.2</jquery.form.version>
         <jquery.form.validator.version>2.1.47</jquery.form.validator.version>
         <jquery.validation.version>1.17.0</jquery.validation.version>
+        <jquery-ui.version>1.9.2</jquery-ui.version>
         <extjs.version>6.2.0</extjs.version>
         <cryptojs.version>3.1.2</cryptojs.version>
         <webjars.locator.core.version>0.37</webjars.locator.core.version>
@@ -295,6 +300,13 @@
             <artifactId>jquery-validation</artifactId>
             <version>${jquery.validation.version}</version>
         </dependency>
+        <!--jquery ui 可支持快速搜索-->
+        <dependency>
+            <groupId>org.webjars</groupId>
+            <artifactId>jquery-ui</artifactId>
+            <version>${jquery-ui.version}</version>
+        </dependency>
+
         <!--Bootstrap框架（前端） start-->
         <dependency>
             <groupId>org.webjars</groupId>
@@ -414,6 +426,30 @@
             <artifactId>slidebars</artifactId>
             <version>${slidebars.version}</version>
         </dependency>
+        <!--popper.js-->
+        <dependency>
+            <groupId>org.webjars</groupId>
+            <artifactId>popper.js</artifactId>
+            <version>${popper.version}</version>
+        </dependency>
+        <!--slimScroll.js-->
+        <dependency>
+            <groupId>org.webjars</groupId>
+            <artifactId>jQuery-slimScroll</artifactId>
+            <version>${slimScroll.version}</version>
+        </dependency>
+        <!-- websocket js start -->
+        <dependency>
+            <groupId>org.webjars</groupId>
+            <artifactId>sockjs-client</artifactId>
+            <version>${sockjs-client.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.webjars</groupId>
+            <artifactId>stomp-js</artifactId>
+            <version>${stomp-js.version}</version>
+        </dependency>
+
         <!-- stomp websocket -->
         <dependency>
             <groupId>org.webjars</groupId>
