--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
         <mybatis.version>2.0.1</mybatis.version>
         <oracle.version>11.2.0.1.0</oracle.version>
         <pagehelper.version>1.2.9</pagehelper.version>
+        <tk.mybatis.mapper.version>2.1.5</tk.mybatis.mapper.version>
         <druid.version>1.1.16</druid.version>
         <fastjson.version>1.2.62</fastjson.version>
         <jackson-annotations.version>2.9.9</jackson-annotations.version>
@@ -131,6 +132,12 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.slf4j</groupId>
+                    <artifactId>slf4j-log4j12</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -257,7 +264,7 @@
         <dependency>
             <groupId>tk.mybatis</groupId>
             <artifactId>mapper-spring-boot-starter</artifactId>
-            <version>RELEASE</version>
+            <version>${tk.mybatis.mapper.version}</version>
         </dependency>
         <!--ehcache缓存-->
         <dependency>
