--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,9 +1,11 @@
 #开发环境
 server.port=8081
-#日志配置
-logging.file.path=log
-logging.file.name=log.log
-
+# log文件写入地址
+resources.logDir=logs/
+# 应用名称
+resources.appName=haitao
+# 日志打印的基础扫描包
+resources.basePackage=com.tao.hai
 #数据库配置
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
 spring.datasource.url=jdbc:oracle:thin:@localhost:1521/PDBORCL
