--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,12 @@
 #配置不同环境的配置文件
 spring.profiles.active=dev
+#日志的级别
+logging.level.org.springframework.web=debug
 #日志打印配置
-spring.config.location=classpath:logback.xml
+logging.config=classpath:logback-spring.xml
 #mybatis配置
-mybatis.type-aliases-package=com.tao.hai.bean
-mybatis.mapper-locations=classpath:mappers/*.xml
+mybatis.mapper-locations=classpath*:mappers/*.xml
+mybatis.type-aliases-package=com.tao.*.dao
 #峰驼命名规范 例如：数据库字段中名称存在下划线的user_name可以直接与实体类中的userName对应，不需要再写resultMapper
 mybatis.configuration.map-underscore-to-camel-case=true
 #pagehelper分页插件配置
