--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.1.6.RELEASE</version>
+        <version>2.2.1.RELEASE</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>com.tao</groupId>
@@ -16,15 +16,15 @@
 
     <properties>
         <java.version>1.8</java.version>
-        <mybatis.generator.version>1.3.2</mybatis.generator.version>
+        <mybatis.generator.version>1.4.0</mybatis.generator.version>
         <mybatis.version>2.0.1</mybatis.version>
         <oracle.version>11.2.0.1.0</oracle.version>
-        <pagehelper.version>1.2.9</pagehelper.version>
+        <pagehelper.version>1.2.13</pagehelper.version>
         <tk.mybatis.mapper.version>2.1.5</tk.mybatis.mapper.version>
-        <druid.version>1.1.16</druid.version>
+        <druid.version>1.1.21</druid.version>
         <fastjson.version>1.2.62</fastjson.version>
         <jackson-annotations.version>2.9.9</jackson-annotations.version>
-        <shiro.version>1.4.1</shiro.version>
+        <shiro.version>1.4.2</shiro.version>
         <ehcache.version>2.9.1</ehcache.version>
         <log4j.version>1.2.17</log4j.version>
         <nekohtml.version>1.9.22</nekohtml.version>
@@ -69,11 +69,12 @@
 <!--        <jquery.version>1.12.0</jquery.version>-->
         <jquery.form.version>4.2.2</jquery.form.version>
         <jquery.form.validator.version>2.1.47</jquery.form.validator.version>
-        <jquery.validation.version>1.17.0</jquery.validation.version>
+        <jquery.validation.version>1.19.0</jquery.validation.version>
         <jquery-ui.version>1.9.2</jquery-ui.version>
         <extjs.version>6.2.0</extjs.version>
         <cryptojs.version>3.1.2</cryptojs.version>
-        <webjars.locator.core.version>0.37</webjars.locator.core.version>
+        <webjars.locator.core.version>0.38</webjars.locator.core.version>
+        <webjars.locator.version>0.38</webjars.locator.version>
         <sweetalert.version>2.1.0</sweetalert.version>
         <toastr.version>2.1.2</toastr.version>
         <animate.version>3.5.2</animate.version>
@@ -147,6 +148,10 @@
             <groupId>org.mybatis.spring.boot</groupId>
             <artifactId>mybatis-spring-boot-starter</artifactId>
             <version>${mybatis.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-cache</artifactId>
         </dependency>
 
         <!--添加mybatis代码自动生成器-->
@@ -284,6 +289,12 @@
             <artifactId>webjars-locator-core</artifactId>
             <version>${webjars.locator.core.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.webjars</groupId>
+            <artifactId>webjars-locator</artifactId>
+            <version>${webjars.locator.version}</version>
+        </dependency>
+
         <!--jQuery组件（前端）-->
         <dependency>
             <groupId>org.webjars</groupId>
@@ -373,8 +384,6 @@
             <artifactId>zTree</artifactId>
             <version>${zTree.version}</version>
         </dependency>
-
-
         <dependency>
             <groupId>org.webjars</groupId>
             <artifactId>less</artifactId>
@@ -593,7 +602,20 @@
                     <addResources>true</addResources>
                 </configuration>
             </plugin>
-
+            <!--解决font图标不显示问题-->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-resources-plugin</artifactId>
+                <configuration>
+                    <nonFilteredFileExtensions>
+                        <nonFilteredFileExtension>woff</nonFilteredFileExtension>
+                        <nonFilteredFileExtension>woff2</nonFilteredFileExtension>
+                        <nonFilteredFileExtension>eot</nonFilteredFileExtension>
+                        <nonFilteredFileExtension>ttf</nonFilteredFileExtension>
+                        <nonFilteredFileExtension>svg</nonFilteredFileExtension>
+                    </nonFilteredFileExtensions>
+                </configuration>
+            </plugin>
             <!--添加mybatis自动配置-->
             <plugin>
                 <groupId>org.mybatis.generator</groupId>
