--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -27,7 +27,8 @@ spring.datasource.maxActive=80
 spring.datasource.druid.maxWait=10000
 # 配置间隔多久才进行一次检测，检测需要关闭的空闲连接，单位是毫秒
 spring.datasource.druid.timeBetweenEvictionRunsMillis=60000
-spring.datasource.druid.ConnectionErrorRetryAttempts=3
+#配置一个连接在池中最小生存的时间，单位是毫秒
+spring.datasource.druid.ConnectionErrorRetryAttempts=300000
 #必须为false（失败后会不断请求数据库，请求在TIME-WAIT，在数据库服务重启后，所有等待请求会访问数据库），
 #为true表示pool向数据库上面的重试请求连接此时失败后标记整个pool为block并close，
 #就算后端数据库恢复正常也不进行重连，客户端对pool的请求都拒绝掉。false表示不会标记 pool为block，新的请求都会尝试去数据库请求connection。
@@ -50,6 +51,9 @@ spring.dataSource.removeAbandonedTimeout=180000
 # 打开PSCache，并且指定每个连接上PSCache的大小
 spring.datasource.druid.poolPreparedStatements=true
 spring.datasource.druid.maxPoolPreparedStatementPerConnectionSize=20
+
+
+#可直接继承druid-spring-boot-starter jar包，这样就不用写druidConfig java 类了
 # 配置监控统计拦截的filters，去掉后监控界面sql无法统计，'wall'用于防火墙
 spring.datasource.druid.filters=stat,wall,log4j
 # 通过connectProperties属性来打开mergeSql功能；慢SQL记录
@@ -61,18 +65,24 @@ spring.datasource.druid.stat-view-servlet.url-pattern=/druid/*
 spring.datasource.druid.stat-view-servlet.allow=127.0.0.1
 # IP黑名单 (存在共同时，deny优先于allow)
 spring.datasource.druid.stat-view-servlet.deny=192.168.1.73
+#允许清空统计数据
 #禁用HTML页面上的“Reset All”功能
 spring.datasource.druid.stat-view-servlet.reset-enable=false
 # 登录名
 spring.datasource.druid.stat-view-servlet.login-username=admin
 # 登录密码
-spring.datasource.druid.stat-view-servlet.login-password=123456
+spring.datasource.druid.stat-view-servlet.login-password=admin
 
 # 配置DruidStatFilter
 spring.datasource.druid.web-stat-filter.enabled=true
 spring.datasource.druid.web-stat-filter.url-pattern=/*
 spring.datasource.druid.web-stat-filter.name=druidWebStatFilter
 spring.datasource.druid.web-stat-filter.exclusions=*.js,*.gif,*.jpg,*.bmp,*.png,*.css,*.ico,/druid/*
+#spring.datasource.druid.web-stat-filter.session-stat-enable=false
+#spring.datasource.druid.web-stat-filter.session-stat-max-count=1000
+#spring.datasource.druid.web-stat-filter.principal-session-name=admin
+#spring.datasource.druid.web-stat-filter.principal-cookie-name=admin
+#spring.datasource.druid.web-stat-filter.profile-enable=true
 ##redis基础配置
 ## 数据库设置
 #spring.redis.database=0
@@ -119,3 +129,7 @@ shiro.unauthorizedUrl=/unauthorized
 cas.server.url.prefix=http://127.0.0.1
 cas.server.loginUrl=http://127.0.0.1/login
 cas.server.logoutUrl=http://127.0.0.1/logout
+
+#静态资源管理
+spring.resources.add-mappings=true
+spring.resources.cache.period=300
