--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,5 +22,6 @@ spring.cache.ehcache.config=classpath:config/ehcache.xml
 #thymeleaf
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
-
+#取消页面缓存
+spring.thymeleaf.cache=false
 #spring.resources.static-locations=classpath:/static/
