文件上传下载功能提交

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -142,3 +142,18 @@ swagger2.version=1.0
 swagger2.contact.name=sunits
 swagger2.contact.url=http://127.0.0.1:8081
 swagger2.contact.email=112433877@qq.com
+#开启文件上传
+#是否开启文件上传支持
+spring.servlet.multipart.enabled=true
+#文件写入磁盘阈值
+spring.servlet.multipart.file-size-threshold=0
+#文件上传临时保存位置
+spring.servlet.multipart.location=E:\\temp
+#单个文件时上传的最大大小
+spring.servlet.multipart.max-file-size=100MB
+#多个文件时上传的最大大小
+spring.servlet.multipart.max-request-size=1000MB
+#文件是否延迟解析
+spring.servlet.multipart.resolve-lazily=false
+#文件上传目录
+file.file-upload-url=D:\\files
