--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,6 +9,8 @@ mybatis.mapper-locations=classpath*:mappers/*.xml
 mybatis.type-aliases-package=com.tao.*.dao
 #峰驼命名规范 例如：数据库字段中名称存在下划线的user_name可以直接与实体类中的userName对应，不需要再写resultMapper
 mybatis.configuration.map-underscore-to-camel-case=true
+mybatis.configuration.jdbc-type-for-null=varchar
+mapper.mappers=tk.mybatis.mapper.common.Mapper
 #pagehelper分页插件配置
 pagehelper.helperDialect=oracle
 pagehelper.reasonable=true
