--- a/pom.xml
+++ b/pom.xml
@@ -620,6 +620,29 @@
             <version>${swagger2.version}</version>
         </dependency>
         <!--swagger2 end-->
+        <!--commons configuration管理配置文件-->
+        <dependency>
+            <groupId>commons-configuration</groupId>
+            <artifactId>commons-configuration</artifactId>
+            <version>1.10</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.10</version>
+        </dependency>
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>2.6</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.velocity</groupId>
+            <artifactId>velocity</artifactId>
+            <version>1.7</version>
+        </dependency>
+        <!--commons configuration管理配置文件 end-->
+
     </dependencies>
 
     <build>
