--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -8,7 +8,8 @@ resources.appName=haitao
 resources.basePackage=com.tao.hai
 #数据库配置
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
-spring.datasource.url=jdbc:oracle:thin:@localhost:1521/PDBORCL
+#spring.datasource.url=jdbc:oracle:thin:@localhost:1521/PDBORCL
+spring.datasource.url=jdbc:oracle:thin:@localhost:1521:orcl
 spring.datasource.username=springboot
 spring.datasource.password=123456
 #mysql数据库配置
