解决重复授权问题

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -32,3 +32,7 @@ shiro.web.enabled=true
 shiro.loginUrl=/login
 shiro.successUrl=/
 shiro.unauthorizedUrl=/error/403
+#允许将sessionId 放到 cookie 中
+shiro.sessionManager.sessionIdCookieEnabled=true
+#允许将 sessionId 放到 Url 地址拦中
+shiro.sessionManager.sessionIdUrlRewritingEnabled=true
