对mybatis增加支持不同数据功能，对初始化脚本的提交

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,12 +7,14 @@ logging.config=classpath:logback-spring.xml
 #mybatis配置
 mybatis.mapper-locations=classpath*:mappers/*.xml
 mybatis.type-aliases-package=com.tao.*.dao
+mybatis.configuration.database-id=${database.type}
 #峰驼命名规范 例如：数据库字段中名称存在下划线的user_name可以直接与实体类中的userName对应，不需要再写resultMapper
 mybatis.configuration.map-underscore-to-camel-case=true
 mybatis.configuration.jdbc-type-for-null=varchar
 mapper.mappers=tk.mybatis.mapper.common.Mapper
 #pagehelper分页插件配置
-pagehelper.helperDialect=oracle
+#pagehelper.helperDialect=oracle
+pagehelper.helperDialect=mysql
 pagehelper.reasonable=true
 pagehelper.supportMethodsArguments=true
 pagehelper.params=count=countSql
