--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -7,16 +7,16 @@ resources.appName=haitao
 # 日志打印的基础扫描包
 resources.basePackage=com.tao.hai
 #数据库配置
-spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
-#spring.datasource.url=jdbc:oracle:thin:@localhost:1521/PDBORCL
-spring.datasource.url=jdbc:oracle:thin:@localhost:1521:orcl
-spring.datasource.username=springboot
-spring.datasource.password=123456
-#mysql数据库配置
-#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-#spring.datasource.url=jdbc:mysql://localhost:3306/cloud-ida?useUnicode=yes&characterEncoding=UTF-8&useSSL=false&serverTimezone=UTC
-#spring.datasource.username=root
+#spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
+##spring.datasource.url=jdbc:oracle:thin:@localhost:1521/PDBORCL
+#spring.datasource.url=jdbc:oracle:thin:@localhost:1521:orcl
+#spring.datasource.username=springboot
 #spring.datasource.password=123456
+#mysql数据库配置
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/root?useUnicode=yes&characterEncoding=UTF-8&useSSL=false&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=root
 #连接池的配置信息
 # 使用druid连接池
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
@@ -39,7 +39,8 @@ spring.datasource.druid.BreakAfterAcquireFailure=false
 spring.datasource.druid.timeBetweenConnectErrorMillis=5000
 # 配置一个连接在池中最小生存的时间，单位是毫秒
 spring.datasource.druid.minEvictableIdleTimeMillis=300000
-spring.datasource.druid.validationQuery=SELECT 1 FROM DUAL
+#spring.datasource.druid.validationQuery=SELECT 1 FROM DUAL
+spring.datasource.druid.validationQuery=SELECT 'X'
 spring.datasource.druid.testWhileIdle=true
 spring.datasource.druid.testOnBorrow=false
 spring.datasource.druid.testOnReturn=false
@@ -158,3 +159,21 @@ spring.servlet.multipart.max-request-size=1000MB
 spring.servlet.multipart.resolve-lazily=false
 #文件上传目录
 file.file-upload-url=D:\\files
+
+#定时任务
+#spring.quartz.scheduler-name=quartzScheduler
+spring.quartz.overwrite-existing-jobs=false
+spring.quartz.job-store-type=jdbc
+
+spring.quartz.properties.org.quartz.scheduler.instanceName=quartzScheduler
+spring.quartz.properties.org.quartz.scheduler.instanceId=AUTO
+spring.quartz.properties.org.quartz.threadPool.class=org.springframework.scheduling.quartz.SimpleThreadPoolTaskExecutor
+spring.quartz.properties.org.quartz.threadPool.threadCount=25
+spring.quartz.properties.org.quartz.threadPool.threadPriority=5
+spring.quartz.properties.org.quartz.jobStore.misfireThreshold=60000
+spring.quartz.properties.org.quartz.jobStore.tablePrefix=QRTZ_
+spring.quartz.properties.org.quartz.jobStore.isClustered=true
+spring.quartz.properties.org.quartz.jobStore.clusterCheckinInterval=20000
+spring.quartz.properties.org.quartz.jobStore.maxMisfiresToHandleAtATime=1
+spring.quartz.properties.org.quartz.jobStore.txIsolationLevelSerializable=false
+
