--- a/pom.xml
+++ b/pom.xml
@@ -656,6 +656,19 @@
             <artifactId>log4j-web</artifactId>
             <version>2.13.3</version>
         </dependency>
+        <!--数据库脚本-->
+        <dependency>
+            <groupId>org.flywaydb</groupId>
+            <artifactId>flyway-core</artifactId>
+            <version>6.4.4</version>
+        </dependency>
+        <dependency>
+            <groupId>org.flywaydb</groupId>
+            <artifactId>flyway-maven-plugin</artifactId>
+            <version>6.4.4</version>
+            <type>maven-plugin</type>
+        </dependency>
+
     </dependencies>
 
     <build>
