--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -163,16 +163,32 @@ file.file-upload-url=D:\\files
 #定时任务
 #spring.quartz.scheduler-name=quartzScheduler
 spring.quartz.overwrite-existing-jobs=false
+#数据库方式
 spring.quartz.job-store-type=jdbc
-
+## never不初始化表结构
+spring.quartz.jdbc.initialize-schema=never
+#properties属性
 spring.quartz.properties.org.quartz.scheduler.instanceName=quartzScheduler
+#默认主机名和时间戳生成实例ID,可以是任何字符串，但对于所有调度程序来说，必须是唯一的 对应qrtz_scheduler_state INSTANCE_NAME字段
 spring.quartz.properties.org.quartz.scheduler.instanceId=AUTO
+#连接池
 spring.quartz.properties.org.quartz.threadPool.class=org.springframework.scheduling.quartz.SimpleThreadPoolTaskExecutor
 spring.quartz.properties.org.quartz.threadPool.threadCount=25
 spring.quartz.properties.org.quartz.threadPool.threadPriority=5
+spring.quartz.properties.org.quartz.threadPool.threadsInheritContextClassLoaderOfInitializingThread=true
+#持久化配置
+spring.quartz.properties.org.quartz.jobStore.class=org.quartz.impl.jdbcjobstore.JobStoreTX
+#持久化配置
+spring.quartz.properties.org.quartz.jobStore.driverDelegateClass=org.quartz.impl.jdbcjobstore.StdJDBCDelegate
+#在被认为“失火”之前，调度程序将“容忍”一个Triggers将其下一个启动时间通过的毫秒数。默认值（如果您在配置中未输入此属性）为60000（60秒）。
 spring.quartz.properties.org.quartz.jobStore.misfireThreshold=60000
+#以指示JDBCJobStore将JobDataMaps中的所有值都作为字符串，因此可以作为名称 - 值对存储而不是在BLOB列中以其序列化形式存储更多复杂的对象。从长远来看，这是更安全的，因为您避免了将非String类序列化为BLOB的类版本问题。
+spring.quartz.properties.org.quartz.jobStore.useProperties=false
+#数据库表前缀
 spring.quartz.properties.org.quartz.jobStore.tablePrefix=QRTZ_
+#打开群集功能
 spring.quartz.properties.org.quartz.jobStore.isClustered=true
+#设置此实例“检入”*与群集的其他实例的频率（以毫秒为单位）。影响检测失败实例的速度
 spring.quartz.properties.org.quartz.jobStore.clusterCheckinInterval=20000
 spring.quartz.properties.org.quartz.jobStore.maxMisfiresToHandleAtATime=1
 spring.quartz.properties.org.quartz.jobStore.txIsolationLevelSerializable=false
