--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -38,3 +38,20 @@ shiro.unauthorizedUrl=/error/403
 shiro.sessionManager.sessionIdCookieEnabled=true
 #允许将 sessionId 放到 Url 地址拦中
 shiro.sessionManager.sessionIdUrlRewritingEnabled=true
+#数据库对比存放路径
+# 是否启用flyway
+spring.flyway.enabled=true
+## 编码格式，默认UTF-8
+spring.flyway.encoding=UTF-8
+# 迁移sql脚本文件存放路径，默认db/migration
+spring.flyway.locations=classpath:db/migration/mysql
+## 迁移sql脚本文件名称的前缀，默认V
+spring.flyway.sql-migration-prefix=V
+## 迁移sql脚本文件名称的分隔符，默认2个下划线__
+spring.flyway.sql-migration-separator=__
+# 迁移sql脚本文件名称的后缀
+spring.flyway.sql-migration-suffixes=.sql
+# 设置为true，当迁移发现数据库非空且存在没有元数据的表时，自动执行基准迁移，新建schema_version表
+spring.flyway.baseline-on-migrate=true
+# postgres10没有引入这个不提示错误，postgres12没有引入会报错
+#spring.flyway.schemas=jooq
