--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -39,6 +39,8 @@ shiro.sessionManager.sessionIdCookieEnabled=true
 #允许将 sessionId 放到 Url 地址拦中
 shiro.sessionManager.sessionIdUrlRewritingEnabled=true
 #数据库对比存放路径
+# flyway 的 clean 命令会删除指定 schema 下的所有 table, 杀伤力太大了, 应该禁掉.
+spring.flyway.clean-disabled=true
 # 是否启用flyway
 spring.flyway.enabled=true
 ## 编码格式，默认UTF-8
