--- a/pom.xml
+++ b/pom.xml
@@ -649,6 +649,12 @@
             <artifactId>velocity</artifactId>
             <version>1.7</version>
         </dependency>
+        <!--池化管理-->
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-pool2</artifactId>
+            <version>2.9.0</version>
+        </dependency>
         <!--commons configuration管理配置文件 end-->
         <!--数据库依赖 start-->
         <!--Oracle依赖-->
